@@ -118,28 +118,31 @@ bin_PROGRAMS = x64 x128 xvic xpet
 # x64
 x64_SOURCES = $(base_sources)
 x64_LDADD = $(c64_lib) $(sounddrv_lib) $(true1541_lib) \
-	@ARCH_LIBS@ @SOUND_LIBS@ @X_LIBS@ -lm
-x64_DEPENDENCIES = libc64 libtrue1541 libsounddrv libarch @ARCH_LIBS@
+	@ALLOCA@ @LIBOBJS@ @ARCH_LIBS@ @SOUND_LIBS@ @X_LIBS@ -lm
+x64_DEPENDENCIES = $(c64_lib) $(sounddrv_lib) $(true1541_lib) \
+	@ALLOCA@ @LIBOBJS@ @ARCH_LIBS@
 
 # x128
 # Notice that this works by overriding some symbols from the C64 library.
 x128_SOURCES = $(base_sources)
 x128_LDADD = $(c128_lib) $(c64_lib) $(sounddrv_lib) $(true1541_lib) \
-	@ARCH_LIBS@ @SOUND_LIBS@ @X_LIBS@ -lm
-x128_DEPENDENCIES = libc128 libc64 libtrue1541 libsounddrv libarch \
-	@ARCH_LIBS@
+	@ALLOCA@ @LIBOBJS@ @ARCH_LIBS@ @SOUND_LIBS@ @X_LIBS@ -lm
+x128_DEPENDENCIES = $(c128_lib) $(c64_lib) $(sounddrv_lib) $(true1541_lib) \
+	@ALLOCA@ @LIBOBJS@ @ARCH_LIBS@
 
 # xvic
 xvic_SOURCES = $(base_sources)
 xvic_LDADD = $(vic20_lib) $(sounddrv_lib) $(true1541_lib) \
-	@ARCH_LIBS@ @SOUND_LIBS@ @X_LIBS@ -lm
-xvic_DEPENDENCIES = libvic20 libtrue1541 libsounddrv libarch @ARCH_LIBS@
+	@ALLOCA@ @LIBOBJS@ @ARCH_LIBS@ @SOUND_LIBS@ @X_LIBS@ -lm
+xvic_DEPENDENCIES = $(vic20_lib) $(sounddrv_lib) $(true1541_lib) \
+	@ALLOCA@ @LIBOBJS@ @ARCH_LIBS@
 
 # xpet
 xpet_SOURCES = $(base_sources)
 xpet_LDADD = $(pet_lib) $(sounddrv_lib) \
-	@ARCH_LIBS@ @SOUND_LIBS@ @X_LIBS@ -lm
-xpet_DEPENDENCIES = libpet libsounddrv libarch @ARCH_LIBS@
+	@ALLOCA@ @LIBOBJS@ @ARCH_LIBS@ @SOUND_LIBS@ @X_LIBS@ -lm
+xpet_DEPENDENCIES = $(pet_lib) $(sounddrv_lib) \
+	@ALLOCA@ @LIBOBJS@ @ARCH_LIBS@
 
 
 # Special targets to build libraries in subdirectories.
